use fixed window rate-limiter on login endpoints

--- a/SRC/App/Warehouse.Host/appsettings.json
+++ b/SRC/App/Warehouse.Host/appsettings.json
@@ -23,9 +23,16 @@
         "Version": "v1",
         "Title": "Warehouse API",
         "Description": "Warehouse management API",
-        "Contact":{
+        "Contact": {
             "Name": "Denes Solti",
             "Email": "sodnaatx@gmail.com"
+        }
+    },
+    "RateLimiting": {
+        // maximum 100 requests in each minutes
+        "Fixed": {
+            "Window": "00:01:00",
+            "PermitLimit": 100
         }
     }
 }
