use user-bound rate-limiter on BL endpoints

--- a/SRC/App/Warehouse.Host/appsettings.json
+++ b/SRC/App/Warehouse.Host/appsettings.json
@@ -29,10 +29,22 @@
         }
     },
     "RateLimiting": {
-        // maximum 100 requests in each minutes
+        // maximum 100 requests in each minute
         "Fixed": {
             "Window": "00:01:00",
             "PermitLimit": 100
+        },
+        // maximum 10 requests in each minute / user
+        "UserBound": {
+            "TokenLimit": 10,
+            "TokensPerPeriod": 10,
+            "ReplenishmentPeriod": "00:01:00"
+        },
+        // maximum 20 requests in each minute / user
+        "Anon": {
+            "TokenLimit": 20,
+            "TokensPerPeriod": 20,
+            "ReplenishmentPeriod": "00:01:00"
         }
     }
 }
