--- a/SRC/App/Warehouse.Host/appsettings.json
+++ b/SRC/App/Warehouse.Host/appsettings.json
@@ -46,5 +46,9 @@
             "TokensPerPeriod": 20,
             "ReplenishmentPeriod": "00:01:00"
         }
+    },
+    "MiniProfiler": {
+        "RouteBasePath": "/profiler",
+        "AllowedUser":  "root"
     }
 }
