profiling & API explorer can be disabled from configuration

--- a/SRC/App/Warehouse.Host/appsettings.json
+++ b/SRC/App/Warehouse.Host/appsettings.json
@@ -19,6 +19,7 @@
         "SessionExpirationMinutes": 1440,
         "SessionCookieName": "warehouse-session"
     },
+    // remove this section to disable API explorer feature
     "Swagger": {
         "Version": "v1",
         "Title": "Warehouse API",
@@ -47,8 +48,9 @@
             "ReplenishmentPeriod": "00:01:00"
         }
     },
+    // remove this section to disable profiling
     "MiniProfiler": {
         "RouteBasePath": "/profiler",
-        "AllowedUser":  "root"
+        "AllowedUser": "root"
     }
 }
