API explorer can be disabled from configuration II

--- a/SRC/App/Warehouse.Host/appsettings.local.json
+++ b/SRC/App/Warehouse.Host/appsettings.local.json
@@ -3,5 +3,15 @@
         "MinimumLevel": {
             "Default": "Debug"
         }
+    },
+    // remove this section to disable API explorer feature
+    "Swagger": {
+        "Version": "v1",
+        "Title": "Warehouse API",
+        "Description": "Warehouse management API",
+        "Contact": {
+            "Name": "Denes Solti",
+            "Email": "sodnaatx@gmail.com"
+        }
     }
 }
