--- a/SRC/App/Warehouse.Host/Warehouse.Host.csproj
+++ b/SRC/App/Warehouse.Host/Warehouse.Host.csproj
@@ -10,13 +10,14 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.*" />
     <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.*" />
+    <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.*" />
     <PackageReference Include="MySqlConnector" Version="2.4.*" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.*" />
     <PackageReference Include="ServiceStack.Logging.Serilog" Version="8.5.*" />
     <PackageReference Include="ServiceStack.OrmLite.MySqlConnector" Version="8.5.*" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.*" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.*" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.*" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.4.*" />
   </ItemGroup>
 
   <ItemGroup>
