--- a/SRC/App/dockerfile
+++ b/SRC/App/dockerfile
@@ -25,6 +25,6 @@ ENV DOTNET_CLI_TELEMETRY_OPTOUT=true
 
 LABEL author="Denes Solti" title="Warehouse.API"
 
-HEALTHCHECK --interval=5m --timeout=3s --start-period=10s --retries=1 CMD curl --fail --insecure https://localhost:1986/api/v1/healthcheck || exit 1
+HEALTHCHECK --interval=5m --timeout=3s --start-period=10s --retries=1 CMD curl --fail --insecure https://localhost:1986/healthcheck || exit 1
 
 ENTRYPOINT ["dotnet", "Warehouse.Host.dll"]
