--- a/SRC/App/Warehouse.Host/appsettings.json
+++ b/SRC/App/Warehouse.Host/appsettings.json
@@ -17,7 +17,9 @@
     "AllowedHosts": "*",
     "Auth": {
         "SessionExpirationMinutes": 1440,
-        "SessionCookieName": "warehouse-session"
+        "SessionCookieName": "warehouse-session",
+        // refresh the token expiration after validation
+        "SlidingExpiration": true
     },
     "RateLimiting": {
         // maximum 100 requests in each minute
