--- a/SRC/App/Warehouse.Host/Warehouse.Host.csproj
+++ b/SRC/App/Warehouse.Host/Warehouse.Host.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
     
   <Import Project="..\Common.targets" />
     
@@ -11,6 +11,7 @@
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.*" />
     <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.*" />
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.*" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.*" />
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.5.*" />
     <PackageReference Include="MiniProfiler.Providers.Redis" Version="4.5.4" />
     <PackageReference Include="MySqlConnector" Version="2.4.*" />
