--- a/SRC/App/Warehouse.Host/Warehouse.Host.csproj
+++ b/SRC/App/Warehouse.Host/Warehouse.Host.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.*" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.*" />
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.5.*" />
-    <PackageReference Include="MiniProfiler.Providers.Redis" Version="4.5.4" />
+    <PackageReference Include="MiniProfiler.Providers.Redis" Version="4.5.*" />
     <PackageReference Include="MySqlConnector" Version="2.4.*" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.*" />
     <PackageReference Include="ServiceStack.Logging.Serilog" Version="8.5.*" />
