--- a/SRC/App/Warehouse.Host/Warehouse.Host.csproj
+++ b/SRC/App/Warehouse.Host/Warehouse.Host.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.5.*" />
     <PackageReference Include="MiniProfiler.Providers.Redis" Version="4.5.*" />
     <PackageReference Include="MySqlConnector" Version="2.4.*" />
+    <PackageReference Include="RedisRateLimiting.AspNetCore" Version="1.2.*" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.*" />
     <PackageReference Include="ServiceStack.Logging.Serilog" Version="8.5.*" />
     <PackageReference Include="ServiceStack.OrmLite.MySqlConnector" Version="8.5.*" />
