--- a/TESTS/Unit/Warehouse.DAL.Tests/Warehouse.DAL.Tests.csproj
+++ b/TESTS/Unit/Warehouse.DAL.Tests/Warehouse.DAL.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
     
   <ItemGroup>
-    <ProjectReference Include="..\..\SRC\App\Warehouse.DAL\Warehouse.DAL.csproj" />
+    <ProjectReference Include="..\..\..\SRC\App\Warehouse.DAL\Warehouse.DAL.csproj" />
   </ItemGroup>
 
 </Project>
